# STM32L4-HAL-Rust

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
src/: gpio.rs  lib.rs  rcc.rs  timer.rs
