[package]
name = "stm32l4_hal"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
#defmt = { version = "0.3", features = ["encoding-rzcobs"] }
#defmt-brtt = { version = "0.1", default-features = false, features = ["rtt"] }
#panic-probe = { version = "0.3", features = ["print-defmt"] }

#panic-rtt-target = { version = "0.2.0" }
panic-halt = "1.0.0"
rtt-target = { version = "0.6.1" }

rtic = { version = "2.1.1", features = [ "thumbv7-backend" ] }
embedded-hal = { version = "1.0.0", features=["defmt-03"] }
embedded-io = { version = "0.6.1", features=["defmt-03"], optional = true }

#hal = { package = "stm32-hal2", version = "^1.9.5", features = ["l4x6", "l4rt"]}

# TODO add a monotonic if you use scheduling
rtic-monotonics = { version = "2.0.3", features = [ "cortex-m-systick" ]}

paste = "1.0.15"

[dependencies.stm32l4]
version = "0.16.0"
features = ["stm32l4x6", "rt"]

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 0
overflow-checks = true 

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s" # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s" # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s" # <-
overflow-checks = false # <-

# uncomment this to switch from the crates.io version of defmt to its git version
# check app-template's README for instructions
# [patch.crates-io]
# defmt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version supported by probe-rs (see changelog)" }
# defmt-rtt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version supported by probe-rs (see changelog)" }
# defmt-test = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version supported by probe-rs (see changelog)" }
# panic-probe = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version supported by probe-rs (see changelog)" }
